# llm-ops

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/.omc/state/: agent-replay-569272c6-d09d-4dbe-830a-a84b6f3e3d88.jsonl  agent-replay-7f6a1b57-9d12-4fcf-81b5-002d20d67ae5.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
backend/app/: config.py  main.py  worker.py
backend/app/api/: admin_usage.py  admin_users.py  announcements.py  argocd_connections.py  auth.py  benchmark_sweeps.py  benchmarks.py  budgets.py  catalog.py  external.py  inference.py  k8s_clusters.py  key_limits.py  keys.py  llmd.py  me.py  model_deployments.py  models_catalog.py  (+3 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_admin_usage.py  test_apply_cost_schedule.py  test_argocd.py  test_auth_jwt.py  test_bench_external_clone.py  test_benchmark_label_note.py  test_benchmark_manifests.py  test_benchmark_presets.py  test_benchmark_sweep_helpers.py  test_benchmark_sweeps_api.py  test_benchmarks_ephemeral.py  test_cluster_placement.py  test_expire_budget_boosts.py  test_external.py  test_external_servings.py  test_health.py  test_hidden_teams.py  test_k8s_clusters.py  test_keys.py  test_llmd.py  test_llmd_k8s.py  test_llmd_manifests.py  test_me.py  test_member_budget_boost.py  test_models_catalog.py  test_reconcile_benchmarks.py  test_reconcile_sweeps.py  test_self_serving_bench.py  test_team_membership.py  test_team_requests.py  test_teams.py
gateway/: Dockerfile  pyproject.toml
gateway/app/: config.py  main.py  proxy.py  trusted_system.py
gateway/tests/: test_proxy.py  test_trusted_system.py
(+379 files in other folders)
